--- a/index.html
+++ b/index.html
@@ -209,6 +209,10 @@
   <div id="mcgregor" class="prelim green">!poirier_3.50-1.30_mcgregor mcgregor 200</div>
   
 </div>
+  
+<button onclick="refreshPage()">Refresh Page</button>
+  
+  
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
 
