--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
   
 </div>
   
-<button onclick="refreshPage()">Refresh Page</button>
+<button onClick="window.location.reload();">Nova Aposta</button>
   
   
 <!-- partial -->
