--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-  <img src="https://i.ibb.co/QkBVCcF/odds-1.jpg" alt="odds" width=379 height=232>
+  <img src="https://i.ibb.co/SxP1d74/odds-2.jpg" alt="odds" width=379 height=232>
 <label class="wrapper" for="states">MONTE SUA APOSTA</label>
 <div class="button dropdown"> 
   <select id="colorselector">
