--- a/index.html
+++ b/index.html
@@ -12,19 +12,31 @@
 <label class="wrapper" for="states">MONTE SUA APOSTA</label>
 <div class="button dropdown"> 
   <select id="colorselector">
-     <option value="default_nenhum">Escolha um card</option>
-     <option value="cardPrincipal">Principal (após 00h)</option>
+     <option value="default_nenhum">Escolha um evento</option>
+     <option value="esporteUFC">UFC</option>
   </select>
 </div>
 
 <div class="states">  
   
   
-  <div id="cardPrincipal" class="colors yellow"> 
+  <div id="esporteUFC" class="colors yellow"> 
       <div class="button dropdown"> 
       <select id="principalselector">
          <option value="default_nenhum">Escolha uma luta</option>
-         <option value="poirier_mcgregor">Dustin Poirier X Conor McGregor</option>
+         <option value="smith_jaynes">Devonte Smith vs Justin Jaynes</option>
+         <option value="rosa_edwards">Karol Rosa vs Joselyne Edwards</option>
+         <option value="johnson_guida">Michael Johnson vs Clay Guida</option>
+         <option value="rodriguez_marques">Mike Rodriguez vs Danilo Marques</option>
+         <option value="mccann_procopio">Molly McCann vs Lara Procopio</option>
+         <option value="osbourne_rivera">Ode Osbourne vs Jerome Rivera</option>
+         <option value="valiev_day">Timur Valiev vs Martin Day</option>
+         <option value="zalal_choi">Youssef Zalal vs Seungwoo Choi</option>
+         <option value="pantoja_kape">Alexandre Pantoja vs Manel Kape</option>
+         <option value="overeem_volkov">Alistair Overeem vs Alexander Volkov</option>
+         <option value="stamann_askar">Cody Stamann vs Askar Askar</option>
+         <option value="sandhagen_edgar">Cory Sandhagen vs Frankie Edgar</option>
+         <option value="ferreira_dariush">Diego Ferreira vs Beneil Dariush</option>
       </select>
     </div>
  </div>
@@ -38,15 +50,137 @@
   
 
   
-  <div id="poirier_mcgregor" class="colors blue"> 
+  <div id="smith_jaynes" class="colors blue"> 
       <div class="button dropdown"> 
-      <select id="winnerselector11">
+      <select id="winnerselector1">
          <option value="default_nenhum">Escolha um vencedor</option>
-         <option value="poirier">Dustin Poirier (3.50)</option>
-         <option value="mcgregor">Conor McGregor (1.30)</option>
+         <option value="smith">Devonte Smith (1.30)</option>
+         <option value="jaynes">Justin Jaynes (3.50)</option>
       </select>
     </div>
  </div>
+ 
+    <div id="rosa_edwards" class="colors blue"> 
+      <div class="button dropdown"> 
+      <select id="winnerselector2">
+         <option value="default_nenhum">Escolha um vencedor</option>
+         <option value="rosa">Karol Rosa (1.40)</option>
+         <option value="edwards">Joselyne Edwards (3.00)</option>
+      </select>
+    </div>
+ </div>
+ 
+    <div id="johnson_guida" class="colors blue"> 
+      <div class="button dropdown"> 
+      <select id="winnerselector3">
+         <option value="default_nenhum">Escolha um vencedor</option>
+         <option value="johnson">Michael Johnson (1.44)</option>
+         <option value="guida">Clay Guida (2.87)</option>
+      </select>
+    </div>
+ </div>
+ 
+    <div id="rodriguez_marques" class="colors blue"> 
+      <div class="button dropdown"> 
+      <select id="winnerselector4">
+         <option value="default_nenhum">Escolha um vencedor</option>
+         <option value="rodriguez">Mike Rodriguez (1.40)</option>
+         <option value="marques">Danilo Marques (3.00)</option>
+      </select>
+    </div>
+ </div>
+ 
+    <div id="mccann_procopio" class="colors blue"> 
+      <div class="button dropdown"> 
+      <select id="winnerselector5">
+         <option value="default_nenhum">Escolha um vencedor</option>
+         <option value="mccann">Molly McCann (1.66)</option>
+         <option value="procopio">Lara Procopio (2.25)</option>
+      </select>
+    </div>
+ </div>
+ 
+    <div id="osbourne_rivera" class="colors blue"> 
+      <div class="button dropdown"> 
+      <select id="winnerselector6">
+         <option value="default_nenhum">Escolha um vencedor</option>
+         <option value="osbourne">Ode Osbourne (1.47)</option>
+         <option value="rivera">Jerome Rivera (2.75)</option>
+      </select>
+    </div>
+ </div>
+ 
+    <div id="valiev_day" class="colors blue"> 
+      <div class="button dropdown"> 
+      <select id="winnerselector7">
+         <option value="default_nenhum">Escolha um vencedor</option>
+         <option value="valiev">Timur Valiev (1.25)</option>
+         <option value="day">Martin Day (4.00)</option>
+      </select>
+    </div>
+ </div>
+ 
+    <div id="zalal_choi" class="colors blue"> 
+      <div class="button dropdown"> 
+      <select id="winnerselector8">
+         <option value="default_nenhum">Escolha um vencedor</option>
+         <option value="zalal">Youssef Zalal (1.40)</option>
+         <option value="choi">Seungwoo Choi (3.00)</option>
+      </select>
+    </div>
+ </div>
+ 
+    <div id="pantoja_kape" class="colors blue"> 
+      <div class="button dropdown"> 
+      <select id="winnerselector9">
+         <option value="default_nenhum">Escolha um vencedor</option>
+         <option value="pantoja">Alexandre Pantoja (1.80)</option>
+         <option value="kape">Manel Kape (2.00)</option>
+      </select>
+    </div>
+ </div>
+ 
+    <div id="overeem_volkov" class="colors blue"> 
+      <div class="button dropdown"> 
+      <select id="winnerselector10">
+         <option value="default_nenhum">Escolha um vencedor</option>
+         <option value="overeem">Alistair Overeem (2.70)</option>
+         <option value="volkov">Alexander Volkov (1.50)</option>
+      </select>
+    </div>
+ </div>
+ 
+    <div id="stamann_askar" class="colors blue"> 
+      <div class="button dropdown"> 
+      <select id="winnerselector11">
+         <option value="default_nenhum">Escolha um vencedor</option>
+         <option value="stamann">Cody Stamann (1.22)</option>
+         <option value="askar">Askar Askar (4.50)</option>
+      </select>
+    </div>
+ </div>
+ 
+    <div id="sandhagen_edgar" class="colors blue"> 
+      <div class="button dropdown"> 
+      <select id="winnerselector12">
+         <option value="default_nenhum">Escolha um vencedor</option>
+         <option value="sandhagen">Cory Sandhagen (1.25)</option>
+         <option value="edgar">Frankie Edgar (4.00)</option>
+      </select>
+    </div>
+ </div>
+ 
+    <div id="ferreira_dariush" class="colors blue"> 
+      <div class="button dropdown"> 
+      <select id="winnerselector13">
+         <option value="default_nenhum">Escolha um vencedor</option>
+         <option value="ferreirah">Diego Ferreira (1.90)</option>
+         <option value="dariush">Beneil Dariush (1.90)</option>
+      </select>
+    </div>
+ </div>
+  
+  
   
   
 </div>
@@ -56,38 +190,44 @@
 
 <div class="output">
   
-  <div id="albazi" class="prelim green">!albazi_1.90-1.90_zhumagulov albazi 200</div>
-  <div id="zhumagulov" class="prelim green">!albazi_1.90-1.90_zhumagulov zhumagulov 200</div>
+  <div id="smith" class="prelim green">!smith_jaynes smith 200</div>
+  <div id="jaynes" class="prelim green">!smith_jaynes jaynes 200</div>
   
-  <div id="lentz" class="prelim green">!lentz_5.00-1.18_evloev lentz 200</div>
-  <div id="evloev" class="prelim green">!lentz_5.00-1.18_evloev evloev 200</div>
+  <div id="rosa" class="prelim green">!rosa_edwards rosa 200</div>
+  <div id="edwards" class="prelim green">!rosa_edwards edwards 200</div>
   
-  <div id="rountree" class="prelim green">!rountree_1.30-3.50_prachnio rountree 200</div>
-  <div id="prachnio" class="prelim green">!rountree_1.30-3.50_prachnio prachnio 200</div>
+  <div id="johnson" class="prelim green">!johnson_guida johnson 200</div>
+  <div id="guida" class="prelim green">!johnson_guida guida 200</div>
   
-  <div id="pena" class="prelim green">!pena_2.10-1.72_mcmann pena 200</div>
-  <div id="mcmann" class="prelim green">!pena_2.10-1.72_mcmann mcmann 200</div>
+  <div id="rodriguez" class="prelim green">!rodriguez_marques rodriguez 200</div>
+  <div id="marques" class="prelim green">!rodriguez_marques marques 200</div>
   
-  <div id="tavares" class="prelim green">!tavares_1.80-2.00_junior tavares 200</div>
-  <div id="junior" class="prelim green">!tavares_1.80-2.00_junior junior 200</div>
+  <div id="mccann" class="prelim green">!mccann_procopio mccann 200</div>
+  <div id="procopio" class="prelim green">!mccann_procopio procopio 200</div>
   
-  <div id="tsarukyan" class="prelim green">!tsarukyan_1.14-6.00_frevola tsarukyan 200</div>
-  <div id="frevola" class="prelim green">!tsarukyan_1.14-6.00_frevola frevola 200</div>
+  <div id="osbourne" class="prelim green">!osbourne_rivera osbourne 200</div>
+  <div id="rivera" class="prelim green">!osbourne_rivera rivera 200</div>
   
-  <div id="sanchez" class="prelim green">!sanchez_2.25-1.66_muradov sanchez 200</div>
-  <div id="muradov" class="prelim green">!sanchez_2.25-1.66_muradov muradov 200</div>
+  <div id="valiev" class="prelim green">!valiev_day valiev 200</div>
+  <div id="day" class="prelim green">!valiev_day day 200</div>
   
-  <div id="rodriguez" class="prelim green">!rodriguez_3.50-1.30_ribas rodriguez 200</div>
-  <div id="ribas" class="prelim green">!rodriguez_3.50-1.30_ribas ribas 200</div>
+  <div id="zalal" class="prelim green">!zalal_choi zalal 200</div>
+  <div id="choi" class="prelim green">!zalal_choi choi 200</div>
   
-  <div id="eye" class="prelim green">!eye_2.00-1.80_calderwood eye 200</div>
-  <div id="calderwood" class="prelim green">!eye_2.00-1.80_calderwood calderwood 200</div>
+  <div id="pantoja" class="prelim green">!pantoja_kape pantoja 200</div>
+  <div id="kape" class="prelim green">!pantoja_kape kape 200</div>
   
-  <div id="hooker" class="prelim green">!hooker_1.72-2.10_chandler hooker 200</div>
-  <div id="chandler" class="prelim green">!hooker_1.72-2.10_chandler chandler 200</div>
+  <div id="overeem" class="prelim green">!overeem_volkov overeem 200</div>
+  <div id="volkov" class="prelim green">!overeem_volkov volkov 200</div>
   
-  <div id="poirier" class="prelim green">!poirier_3.50-1.30_mcgregor poirier 200</div>
-  <div id="mcgregor" class="prelim green">!poirier_3.50-1.30_mcgregor mcgregor 200</div>
+  <div id="stamann" class="prelim green">!stamann_askar stamann 200</div>
+  <div id="askar" class="prelim green">!stamann_askar askar 200</div>
+  
+  <div id="sandhagen" class="prelim green">!sandhagen_edgar sandhagen 200</div>
+  <div id="edgar" class="prelim green">!sandhagen_edgar edgar 200</div>
+  
+  <div id="ferreira" class="prelim green">!ferreira_dariush ferreira 200</div>
+  <div id="dariush" class="prelim green">!ferreira_dariush dariush 200</div>
   
 </div>
   
