--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-  <img src="https://i.ibb.co/SxP1d74/odds-2.jpg" alt="odds" width=492 height=231>
+  <img src="https://i.ibb.co/HxHL4P3/20210206-UFC.jpg" alt="odds" width=492 height=231>
 <label class="wrapper" for="states">MONTE SUA APOSTA</label>
 <div class="button dropdown"> 
   <select id="colorselector">
