--- a/index.html
+++ b/index.html
@@ -50,16 +50,18 @@
   
 
   
-  <div id="smith_jaynes" class="colors blue"> 
+
+
+    <div id="smith_jaynes" class="colors blue"> 
       <div class="button dropdown"> 
-      <select id="winnerselector1">
+      <select id="winnerselector14">
          <option value="default_nenhum">Escolha um vencedor</option>
-         <option value="smith">Devonte Smith (1.30)</option>
-         <option value="jaynes">Justin Jaynes (3.50)</option>
+         <option value="jaynes">Devonte Smith (1.30)</option>
+         <option value="smith_">Justin Jaynes (3.50)</option>
       </select>
     </div>
  </div>
- 
+  
     <div id="rosa_edwards" class="colors blue"> 
       <div class="button dropdown"> 
       <select id="winnerselector2">
