--- a/index.html
+++ b/index.html
@@ -49,7 +49,15 @@
 <div class="states">
   
 
-  
+    <div id="" class="colors blue"> 
+      <div class="button dropdown"> 
+      <select id="winnerselector14">
+         <option value="default_nenhum">Escolha um vencedor</option>
+         <option value="jaynes">Devonte Smith (1.30)</option>
+         <option value="smith_">Justin Jaynes (3.50)</option>
+      </select>
+    </div>
+ </div>  
 
 
     <div id="smith_jaynes" class="colors blue"> 
