--- a/index.html
+++ b/index.html
@@ -24,15 +24,14 @@
       <div class="button dropdown"> 
       <select id="principalselector">
          <option value="default_nenhum">Escolha uma luta</option>
-         <option value="smith_jaynes">Devonte Smith vs Justin Jaynes</option>
          <option value="rosa_edwards">Karol Rosa vs Joselyne Edwards</option>
-         <option value="johnson_guida">Michael Johnson vs Clay Guida</option>
+         <option value="smith_jaynes">Devonte Smith vs Justin Jaynes</option>
          <option value="rodriguez_marques">Mike Rodriguez vs Danilo Marques</option>
-         <option value="mccann_procopio">Molly McCann vs Lara Procopio</option>
-         <option value="pantoja_kape">Alexandre Pantoja vs Manel Kape</option>
-         <option value="overeem_volkov">Alistair Overeem vs Alexander Volkov</option>
-         <option value="sandhagen_edgar">Cory Sandhagen vs Frankie Edgar</option>
          <option value="ferreira_dariush">Diego Ferreira vs Beneil Dariush</option>
+         <option value="pantoja_kape">Alexandre Pantoja vs Manel Kape</option>
+         <option value="johnson_guida">Michael Johnson vs Clay Guida</option>
+         <option value="sandhagen_edgar">Cory Sandhagen vs Frankie Edgar</option>
+         <option value="overeem_volkov">Alistair Overeem vs Alexander Volkov</option>
       </select>
     </div>
  </div>
@@ -49,8 +48,8 @@
       <div class="button dropdown"> 
       <select id="winnerselector14">
          <option value="default_nenhum">Escolha um vencedor</option>
-         <option value="jaynes">Devonte Smith (1.30)</option>
-         <option value="smith_">Justin Jaynes (3.50)</option>
+         <option value="">Devonte Smith (1.30)</option>
+         <option value="">Justin Jaynes (3.50)</option>
       </select>
     </div>
  </div>  
@@ -61,7 +60,7 @@
       <select id="winnerselector14">
          <option value="default_nenhum">Escolha um vencedor</option>
          <option value="jaynes">Devonte Smith (1.30)</option>
-         <option value="smith_">Justin Jaynes (3.50)</option>
+         <option value="smith">Justin Jaynes (3.50)</option>
       </select>
     </div>
  </div>
