--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       <div class="button dropdown"> 
       <select id="winnerselector14">
          <option value="default_nenhum">Escolha um vencedor</option>
-         <option value="">Devonte Smith (1.30)</option>
-         <option value="">Justin Jaynes (3.50)</option>
+         <option value=""></option>
+         <option value=""></option>
       </select>
     </div>
  </div>  
@@ -57,7 +57,7 @@
 
     <div id="smith_jaynes" class="colors blue"> 
       <div class="button dropdown"> 
-      <select id="winnerselector14">
+      <select id="winnerselector15">
          <option value="default_nenhum">Escolha um vencedor</option>
          <option value="jaynes">Devonte Smith (1.30)</option>
          <option value="smith">Justin Jaynes (3.50)</option>
