--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-  <img src="https://i.ibb.co/LvbbYjM/20210206-UFC.jpg" alt="odds" width=443 height=274>
+  <img src="https://i.ibb.co/D4wyr58/20210206-UFC.jpg" alt="odds" width=443 height=274>
 <label class="wrapper" for="states">MONTE SUA APOSTA</label>
 <div class="button dropdown"> 
   <select id="colorselector">
