--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="button dropdown"> 
   <select id="colorselector">
      <option value="default_nenhum">Escolha um evento</option>
-     <option value="esporteUFC">UFC</option>
+     <option value="esporteSB">Super Bowl</option>
   </select>
 </div>
 
@@ -23,10 +23,11 @@
   <div id="esporteUFC" class="colors yellow"> 
       <div class="button dropdown"> 
       <select id="principalselector">
-         <option value="pantoja_kape">Alexandre Pantoja vs Manel Kape</option>
-         <option value="johnson_guida">Michael Johnson vs Clay Guida</option>
-         <option value="sandhagen_edgar">Cory Sandhagen vs Frankie Edgar</option>
-         <option value="overeem_volkov">Alistair Overeem vs Alexander Volkov</option>
+         <option value="vitoria">Vitória</option>
+         <option value="pri_quarto">1o quarto</option>
+         <option value="seg_quarto">2o quarto</option>
+         <option value="ter_quarto">3o quarto</option>
+         <option value="qua_quarto">4o quarto</option>
       </select>
     </div>
  </div>
@@ -37,135 +38,53 @@
 
 
 <div class="states">
-
-
-
-    <div id="smith_jaynes" class="colors blue"> 
+  
+    <div id="vitoria" class="colors blue"> 
       <div class="button dropdown"> 
       <select id="winnerselector1">
          <option value="default_nenhum">Escolha um vencedor</option>
-         <option value="jaynes">Devonte Smith (1.30)</option>
-         <option value="smith">Justin Jaynes (3.50)</option>
+         <option value="vit_chiefs">KC Chiefs (1.62)</option>
+         <option value="vit_buccaneers">TB Buccaneers (2.40)</option>
       </select>
     </div>
  </div>
-  
-    <div id="rosa_edwards" class="colors blue"> 
+ 
+    <div id="pri_quarto" class="colors blue"> 
       <div class="button dropdown"> 
       <select id="winnerselector2">
          <option value="default_nenhum">Escolha um vencedor</option>
-         <option value="rosa">Karol Rosa (1.40)</option>
-         <option value="edwards">Joselyne Edwards (3.00)</option>
+         <option value="pri_chiefs">KC Chiefs (1.74)</option>
+         <option value="pri_buccaneers">TB Buccaneers (2.15)</option>
       </select>
     </div>
  </div>
  
-    <div id="johnson_guida" class="colors blue"> 
+    <div id="seg_quarto" class="colors blue"> 
       <div class="button dropdown"> 
       <select id="winnerselector3">
          <option value="default_nenhum">Escolha um vencedor</option>
-         <option value="johnson">Michael Johnson (1.44)</option>
-         <option value="guida">Clay Guida (2.87)</option>
+         <option value="seg_chiefs">KC Chiefs (1.62)</option>
+         <option value="seg_buccaneers">TB Buccaneers (2.30)</option>
       </select>
     </div>
  </div>
  
-    <div id="rodriguez_marques" class="colors blue"> 
+    <div id="ter_quarto" class="colors blue"> 
       <div class="button dropdown"> 
       <select id="winnerselector4">
          <option value="default_nenhum">Escolha um vencedor</option>
-         <option value="rodriguez">Mike Rodriguez (1.40)</option>
-         <option value="marques">Danilo Marques (3.00)</option>
+         <option value="ter_chiefs">KC Chiefs (1.62)</option>
+         <option value="ter_buccaneers">TB Buccaneers (2.30)</option>
       </select>
     </div>
  </div>
  
-    <div id="mccann_procopio" class="colors blue"> 
+    <div id="qua_quarto" class="colors blue"> 
       <div class="button dropdown"> 
       <select id="winnerselector5">
          <option value="default_nenhum">Escolha um vencedor</option>
-         <option value="mccann">Molly McCann (1.66)</option>
-         <option value="procopio">Lara Procopio (2.25)</option>
-      </select>
-    </div>
- </div>
- 
-    <div id="osbourne_rivera" class="colors blue"> 
-      <div class="button dropdown"> 
-      <select id="winnerselector6">
-         <option value="default_nenhum">Escolha um vencedor</option>
-         <option value="osbourne">Ode Osbourne (1.47)</option>
-         <option value="rivera">Jerome Rivera (2.75)</option>
-      </select>
-    </div>
- </div>
- 
-    <div id="valiev_day" class="colors blue"> 
-      <div class="button dropdown"> 
-      <select id="winnerselector7">
-         <option value="default_nenhum">Escolha um vencedor</option>
-         <option value="valiev">Timur Valiev (1.25)</option>
-         <option value="day">Martin Day (4.00)</option>
-      </select>
-    </div>
- </div>
- 
-    <div id="zalal_choi" class="colors blue"> 
-      <div class="button dropdown"> 
-      <select id="winnerselector8">
-         <option value="default_nenhum">Escolha um vencedor</option>
-         <option value="zalal">Youssef Zalal (1.40)</option>
-         <option value="choi">Seungwoo Choi (3.00)</option>
-      </select>
-    </div>
- </div>
- 
-    <div id="pantoja_kape" class="colors blue"> 
-      <div class="button dropdown"> 
-      <select id="winnerselector9">
-         <option value="default_nenhum">Escolha um vencedor</option>
-         <option value="pantoja">Alexandre Pantoja (1.80)</option>
-         <option value="kape">Manel Kape (2.00)</option>
-      </select>
-    </div>
- </div>
- 
-    <div id="overeem_volkov" class="colors blue"> 
-      <div class="button dropdown"> 
-      <select id="winnerselector10">
-         <option value="default_nenhum">Escolha um vencedor</option>
-         <option value="overeem">Alistair Overeem (2.70)</option>
-         <option value="volkov">Alexander Volkov (1.50)</option>
-      </select>
-    </div>
- </div>
- 
-    <div id="stamann_askar" class="colors blue"> 
-      <div class="button dropdown"> 
-      <select id="winnerselector11">
-         <option value="default_nenhum">Escolha um vencedor</option>
-         <option value="stamann">Cody Stamann (1.22)</option>
-         <option value="askar">Askar Askar (4.50)</option>
-      </select>
-    </div>
- </div>
- 
-    <div id="sandhagen_edgar" class="colors blue"> 
-      <div class="button dropdown"> 
-      <select id="winnerselector12">
-         <option value="default_nenhum">Escolha um vencedor</option>
-         <option value="sandhagen">Cory Sandhagen (1.25)</option>
-         <option value="edgar">Frankie Edgar (4.00)</option>
-      </select>
-    </div>
- </div>
- 
-    <div id="ferreira_dariush" class="colors blue"> 
-      <div class="button dropdown"> 
-      <select id="winnerselector13">
-         <option value="default_nenhum">Escolha um vencedor</option>
-         <option value="ferreirah">Diego Ferreira (1.90)</option>
-         <option value="dariush">Beneil Dariush (1.90)</option>
+         <option value="qua_chiefs">KC Chiefs (1.68)</option>
+         <option value="qua_buccaneers">TB Buccaneers (2.15)</option>
       </select>
     </div>
  </div>
@@ -180,44 +99,20 @@
 
 <div class="output">
   
-  <div id="smith" class="prelim green">!smith_jaynes smith 200</div>
-  <div id="jaynes" class="prelim green">!smith_jaynes jaynes 200</div>
+  <div id="pri_chiefs" class="prelim green">!vitoria chiefs 200</div>
+  <div id="vit_buccaneers" class="prelim green">!vitoria buccaneers 200</div>
   
-  <div id="rosa" class="prelim green">!rosa_edwards rosa 200</div>
-  <div id="edwards" class="prelim green">!rosa_edwards edwards 200</div>
+  <div id="pri_chiefs" class="prelim green">!primeiro chiefs 200</div>
+  <div id="pri_buccaneers" class="prelim green">!primeiro buccaneers 200</div>
   
-  <div id="johnson" class="prelim green">!johnson_guida johnson 200</div>
-  <div id="guida" class="prelim green">!johnson_guida guida 200</div>
+  <div id="seg_chiefs" class="prelim green">!segundo chiefs 200</div>
+  <div id="seg_buccaneers" class="prelim green">!segundo buccaneers 200</div>
   
-  <div id="rodriguez" class="prelim green">!rodriguez_marques rodriguez 200</div>
-  <div id="marques" class="prelim green">!rodriguez_marques marques 200</div>
+  <div id="ter_chiefs" class="prelim green">!terceiro chiefs 200</div>
+  <div id="ter_buccaneers" class="prelim green">!terceiro buccaneers 200</div>
   
-  <div id="mccann" class="prelim green">!mccann_procopio mccann 200</div>
-  <div id="procopio" class="prelim green">!mccann_procopio procopio 200</div>
-  
-  <div id="osbourne" class="prelim green">!osbourne_rivera osbourne 200</div>
-  <div id="rivera" class="prelim green">!osbourne_rivera rivera 200</div>
-  
-  <div id="valiev" class="prelim green">!valiev_day valiev 200</div>
-  <div id="day" class="prelim green">!valiev_day day 200</div>
-  
-  <div id="zalal" class="prelim green">!zalal_choi zalal 200</div>
-  <div id="choi" class="prelim green">!zalal_choi choi 200</div>
-  
-  <div id="pantoja" class="prelim green">!pantoja_kape pantoja 200</div>
-  <div id="kape" class="prelim green">!pantoja_kape kape 200</div>
-  
-  <div id="overeem" class="prelim green">!overeem_volkov overeem 200</div>
-  <div id="volkov" class="prelim green">!overeem_volkov volkov 200</div>
-  
-  <div id="stamann" class="prelim green">!stamann_askar stamann 200</div>
-  <div id="askar" class="prelim green">!stamann_askar askar 200</div>
-  
-  <div id="sandhagen" class="prelim green">!sandhagen_edgar sandhagen 200</div>
-  <div id="edgar" class="prelim green">!sandhagen_edgar edgar 200</div>
-  
-  <div id="ferreira" class="prelim green">!ferreira_dariush ferreira 200</div>
-  <div id="dariush" class="prelim green">!ferreira_dariush dariush 200</div>
+  <div id="qua_chiefs" class="prelim green">!quarto chiefs 200</div>
+  <div id="qua_buccaneers" class="prelim green">!quarto buccaneers 200</div>
   
 </div>
   
