--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="states">  
   
   
-  <div id="esporteUFC" class="colors yellow"> 
+  <div id="esporteSB" class="colors yellow"> 
       <div class="button dropdown"> 
       <select id="principalselector">
          <option value="vitoria">Vitória</option>
