--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <div id="esporteSB" class="colors yellow"> 
       <div class="button dropdown"> 
       <select id="principalselector">
+         <option value="default_nenhum">Escolha uma linha</option>
          <option value="vitoria">Vitória</option>
          <option value="pri_quarto">1o quarto</option>
          <option value="seg_quarto">2o quarto</option>
