--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 <div class="output">
   
-  <div id="pri_chiefs" class="prelim green">!vitoria chiefs 200</div>
+  <div id="vit_chiefs" class="prelim green">!vitoria chiefs 200</div>
   <div id="vit_buccaneers" class="prelim green">!vitoria buccaneers 200</div>
   
   <div id="pri_chiefs" class="prelim green">!primeiro chiefs 200</div>
