--- a/index.html
+++ b/index.html
@@ -40,12 +40,22 @@
 
 <div class="states">
   
-    <div id="vitoria" class="colors blue"> 
+    <div id="ignorar" class="colors blue"> 
       <div class="button dropdown"> 
       <select id="winnerselector1">
+         <option value="default_nenhum">Ignorar</option>
+         <option value="ignorar1">Ignorar</option>
+         <option value="ignorar2">Ignorar</option>
+      </select>
+    </div>
+ </div>
+ 
+    <div id="vitoria" class="colors blue"> 
+      <div class="button dropdown"> 
+      <select id="winnerselector99">
          <option value="default_nenhum">Escolha um vencedor</option>
-         <option value="vit_chiefs">KC Chiefs (1.62)</option>
-         <option value="vit_buccaneers">TB Buccaneers (2.40)</option>
+         <option value="vit_chiefs">KC Chiefs (1.74)</option>
+         <option value="vit_buccaneers">TB Buccaneers (2.15)</option>
       </select>
     </div>
  </div>
