--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <div class="button dropdown"> 
       <select id="principalselector">
          <option value="default_nenhum">Escolha uma linha</option>
+         <option value="ignorar">ignorar</option>
          <option value="vitoria">Vitória</option>
          <option value="pri_quarto">1o quarto</option>
          <option value="seg_quarto">2o quarto</option>
