--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - APOSTAS UFC 257</title>
+  <title>TrabalhadorCansado - APOSTAS</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-  <img src="https://i.ibb.co/N32N3Gj/20210206-UFC.jpg" alt="odds" width=443 height=274>
+  <img src="https://i.ibb.co/PC2bSGc/20210207-Super-Bowl.jpg" alt="odds" width=1360 height=426>
 <label class="wrapper" for="states">MONTE SUA APOSTA</label>
 <div class="button dropdown"> 
   <select id="colorselector">
