--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
+  <img src="https://i.ibb.co/SNgxgWs/20210207-Sorteio.jpg" alt="odds" width=969 height=268>
   <img src="https://i.ibb.co/PC2bSGc/20210207-Super-Bowl.jpg" alt="odds" width=1360 height=426>
 <label class="wrapper" for="states">MONTE SUA APOSTA</label>
 <div class="button dropdown"> 
