--- a/index.html
+++ b/index.html
@@ -13,24 +13,13 @@
 <div class="button dropdown"> 
   <select id="colorselector">
      <option value="default_nenhum">Escolha um evento</option>
-     <option value="esporteSB">Super Bowl</option>
-     <option value="esporteBBB">Super Bowl</option>
+     <option value="esporteBBB">BBB</option>
   </select>
 </div>
 
 <div class="states">  
   
   
-  <div id="esporteSB" class="colors yellow"> 
-      <div class="button dropdown"> 
-      <select id="principalselector">
-         <option value="default_nenhum">Escolha uma linha</option>
-         <option value="seg_quarto">2o quarto</option>
-         <option value="ter_quarto">3o quarto</option>
-         <option value="qua_quarto">4o quarto</option>
-      </select>
-    </div>
- </div>
   
   
   <div id="esporteBBB" class="colors yellow"> 
