--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-  <img src="https://i.ibb.co/3vDcJNV/20210207-Sorteio.jpg" alt="odds" width=969 height=268>
+  <img src="https://i.ibb.co/k0cpphK/betting-bad-1.png" alt="odds" width=275 height=183>
 <label class="wrapper" for="states">MONTE SUA APOSTA</label>
 <div class="button dropdown"> 
   <select id="colorselector">
