--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
+<div>
   <img src="https://i.ibb.co/k0cpphK/betting-bad-1.png" alt="odds" width=275 height=183>
+</div>
+<div>
   <img src="https://i.ibb.co/SsTFMnp/20210802-bbb.jpg" alt="odds" width=1065 height=260>
+</div>
+<div>
   <img src="https://i.ibb.co/gm9PCsT/20210802-nba.jpg" alt="odds" width=738 height=330>
+</div>
 <label class="wrapper" for="states">MONTE SUA APOSTA</label>
 <div class="button dropdown"> 
   <select id="colorselector">
