--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   
   <div id="esporteBBB" class="colors yellow"> 
       <div class="button dropdown"> 
-      <select id="principalselector">
+      <select id="principalselector1">
          <option value="default_nenhum">Escolha uma linha</option>
          <option value="eliminado">Eliminado</option>
       </select>
@@ -42,7 +42,7 @@
   
    <div id="esporteNBA" class="colors yellow"> 
       <div class="button dropdown"> 
-      <select id="principalselector">
+      <select id="principalselector2">
          <option value="default_nenhum">Escolha uma linha</option>
          <option value="wizards_bulls">Wizards X Bulls</option>
          <option value="raptors_grizzlies">Raptors X Grizzlies</option>
