--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   
   <div id="esporteBBB" class="colors yellow"> 
       <div class="button dropdown"> 
-      <select id="principalselector1">
+      <select id="principalselector">
          <option value="default_nenhum">Escolha uma linha</option>
          <option value="eliminado">Eliminado</option>
       </select>
