--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   
    <div id="esporteNBA" class="colors yellow"> 
       <div class="button dropdown"> 
-      <select id="principalselector2">
+      <select id="esporteselectora">
          <option value="default_nenhum">Escolha uma linha</option>
          <option value="wizards_bulls">Wizards X Bulls</option>
          <option value="raptors_grizzlies">Raptors X Grizzlies</option>
